Changes from Laptop

--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
 </head>
 
 <body>
+<!--header !-->
 <div id="header">
-<img src="images/logo.png" />
+	<div id="header-content">
+		<img src="images/logo.png" />
+	</div>
 </div>
+<!-- Search !-->
 <div id="search">
-<form action="#" name="search">
-<input class="text" type="text" value="Search by Title or Author..." />
-<input type="image" src="images/search.png" alt="Submit" />or
-<img src="images/browsegenre.png" />
-</form>
+	<div id="search-content">
+		<form action="#" name="search">
+			<input class="text" type="text" value="Search by Title or Author..." />
+			<input type="image" src="images/search.png" alt="Submit" />or
+			<img src="images/browsegenre.png" />
+		</form>
+	</div>
 
 </div>
 
 <div id="results">
-
-<p class="alignleft">Search Results</p>
-<p class="alignright">Sort By: <select></select>
-
+	<div id="results-content">
+		<p class="alignleft">Search Results</p>
+		<p class="alignright">Sort By: <select></select>
+	</div>
 </div>
 
 
