--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<div id="search-content">
 		<form action="#" name="search">
 			<input class="text" type="text" value="Search by Title or Author..." />
-			<input type="image" src="images/search.png" alt="Submit" />or
-			<img src="images/browsegenre.png" />
+			<input type="image" src="images/search-new.png" alt="Submit" />or
+			<img src="images/browse-new.png" />
 		</form>
 	</div>
 
@@ -38,19 +38,6 @@
 
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
