Commit before starting book section

--- a/books.html
+++ b/books.html
@@ -19,11 +19,11 @@
 <div id="search">
 	<div id="search-content">
 	
-		<form action="#" name="search">
+	<form action="#" name="search">
 			<input class="text" type="text" value="Search by Title or Author..." />
 			<input type="image" src="images/search-new.png" alt="Submit" />or
 			<img src="images/browse-new.png" />
-		</form>
+		</form> 
 		
 	</div>
 	
@@ -38,7 +38,7 @@
 </div>
 
 <div id="footer">
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum ac diam a vulputate. Nam tellus purus, tincidunt in dictum quis, imperdiet at metus. 
+	Books &copy;2017 
 	
 </div>
 </body>
