Commit before starting images

--- a/books.html
+++ b/books.html
@@ -29,10 +29,18 @@
 	
 </div>
 
+
 <div id="results">
 	
 	<div id="results-content">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum ac diam a vulputate. Nam tellus purus, tincidunt in dictum quis, imperdiet at metus. 
+		<p class="alignleft"><h1>Search Results</h1></p>
+		<p class="alignright">Sort By: <select></select></p>
+	<div id="results-list">
+		
+		<img src="bookcover.jpg" width="230"><div class="hilight">This is a description</div> 
+		
+	</div>
+		
 	</div>
 	
 </div>
