End of day friday

--- a/books.html
+++ b/books.html
@@ -35,10 +35,62 @@
 	<div id="results-content">
 		<p class="alignleft"><h1>Search Results</h1></p>
 		<p class="alignright">Sort By: <select></select></p>
-	<div id="results-list">
+	<!--<div id="results-list">
 		
 		<img src="bookcover.jpg" width="230"><div class="hilight">This is a description</div> 
 		
+	</div> !-->
+	<div id="results-list">
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	</div>
+	<div id="results-list">
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
+	<div id="book-icon">
+		<div id="overlay">
+		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		</div>
+	
+	</div>
 	</div>
 		
 	</div>
