last one for friday

--- a/books.html
+++ b/books.html
@@ -34,7 +34,9 @@
 	
 	<div id="results-content">
 		<p class="alignleft"><h1>Search Results</h1></p>
-		<p class="alignright">Sort By: <select></select></p>
+		<p class="alignright">Sort By: <select class="selectBox">
+			<option>Author</option>
+		</select></p>
 	<!--<div id="results-list">
 		
 		<img src="bookcover.jpg" width="230"><div class="hilight">This is a description</div> 
