--- a/books.html
+++ b/books.html
@@ -21,7 +21,7 @@
 	
 	<form action="#" name="search">
 			<input class="text" type="text" value="Search by Title or Author..." />
-			<input type="image" src="images/search-new.png" alt="Submit" />or
+			<input type="image" src="images/search-new.png" alt="Submit" /> or
 			<img src="images/browse-new.png" />
 		</form> 
 		
@@ -38,12 +38,18 @@
 			<option>Author</option>
 		</select></p>
 	<!--<div id="results-list">
-		
+		First attempt - didn't work
 		<img src="bookcover.jpg" width="230"><div class="hilight">This is a description</div> 
 		
 	</div> !-->
 	<div id="results-list">
 	<div id="book-icon">
+	    <div id="video-tag-year">
+     		2007
+     	</div>
+        <div id="video-tag-category">
+     		Magic
+        </div>
 		<div id="overlay">
 		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 		</div>
@@ -68,6 +74,7 @@
 	
 	</div>
 	</div>
+	<!-- Doing it again for next row !-->
 	<div id="results-list">
 	<div id="book-icon">
 		<div id="overlay">
