--- a/books.html
+++ b/books.html
@@ -14,7 +14,7 @@
 	<img src="images/logo.png">
 
 	
-</div>
+</div> <!-- end Header !-->
 
 <div id="search">
 	<div id="search-content">
@@ -27,7 +27,7 @@
 		
 	</div>
 	
-</div>
+</div> <!-- End Search !-->
 
 
 <div id="results">
@@ -43,73 +43,74 @@
 		
 	</div> !-->
 	<div id="results-list">
-	<div id="book-icon">
-	    <div id="video-tag-year">
-     		2007
-     	</div>
-        <div id="video-tag-category">
-     		Magic
-        </div>
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="video-tag-year">
+				2007
+			</div>
+			<div id="video-tag-category">
+				Magic
+			</div>
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
+	</div> <!-- End Results-List !-->
 	
-	</div>
-	</div>
 	<!-- Doing it again for next row !-->
 	<div id="results-list">
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	<div id="book-icon">
-		<div id="overlay">
-		  	<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+		<div id="book-icon">
+			<div id="overlay">
+				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
+			</div>
+
 		</div>
-	
-	</div>
-	</div>
+	</div> <!--End Results-List !-->
 		
-	</div>
+	</div> <!--End Results-Content !-->
 	
-</div>
+</div> <!-- End Results !-->
 
 <div id="footer">
 	Books &copy;2017 
 	
 </div>
-	</div>
+</div><!-- End Container !-->
 </body>
 </html>
