--- a/books.html
+++ b/books.html
@@ -22,7 +22,7 @@
 	<form action="#" name="search">
 			<input class="text" type="text" value="Search by Title or Author..." />
 			<input type="image" src="images/search-new.png" alt="Submit" /> or
-			<img src="images/browse-new.png" />
+		<a href="#"><img src="images/browse-new.png" /></a>
 		</form> 
 		
 	</div>
@@ -30,8 +30,7 @@
 </div> <!-- End Search !-->
 
 
-<div id="results">
-	
+<!--<div id="results"> !-->
 	<div id="results-content">
 		<p class="alignleft"><h1>Search Results</h1></p>
 		<p class="alignright">Sort By: <select class="selectBox">
@@ -45,10 +44,10 @@
 	<div id="results-list">
 		<div id="book-icon">
 			<div id="video-tag-year">
-				2007
+				<p>2003</p>
 			</div>
 			<div id="video-tag-category">
-				Magic
+				<p><em>Magic</em></p>
 			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
@@ -56,18 +55,36 @@
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+					<p>2003</p>
+				</div>
+				<div id="video-tag-category">
+					<p><em>Magic</em></p>
+				</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
@@ -78,24 +95,48 @@
 	<!-- Doing it again for next row !-->
 	<div id="results-list">
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
 
 		</div>
 		<div id="book-icon">
+			<div id="video-tag-year">
+				<p>2003</p>
+			</div>
+			<div id="video-tag-category">
+				<p><em>Magic</em></p>
+			</div>
 			<div id="overlay">
 				<p>Harry Potter and the Order of the Phoenix<br><br><strong>J.K. Rowling</strong></p>
 			</div>
@@ -105,7 +146,7 @@
 		
 	</div> <!--End Results-Content !-->
 	
-</div> <!-- End Results !-->
+<!-- </div> <!-- End Results !-->
 
 <div id="footer">
 	Books &copy;2017 
